# onsei

./: Readme.md
apps/: online_detector.py
dataprep/: ML_RT_estimation.m  analyzeTestResults.m  annotateKw.m  annotateVadData.m  annotateWav.m  applyIR.m  audioStreamFeatures.m  audioproc.py  batchAnnotate.m  collect_wavrunner_epochs.py  collect_wavrunner_files.py  compileAllResults.m  compileTestResults.m  convertFeats.py  copyData.sh  createQuickyTraining.m  createQuickyTrainingWavs.m  createTestFeatures.py  createTestGrid.py  createTrainingFeatures.py  createTrainingWavs.m  createVadTraining.py  endpointer.m  eval.py  eval_detector.py  fbankExample.py  full_eval.py  getAnnotatedData.m  getAnnotatedData2.m  getFalseAlarms.m  getLevels.m  getTest.sh  get_all_data.sh  loadEmbeddedFeatures.py  logM_kwClip_1.pkl  logMelSpec.m  makeROCs.m  matrix_pb2.py  melfilter.m  plotFeats.py  (+14 more)
implementation/: .gitignore  CMakeLists.txt  base64.cpp  batchfeat.sh  batchrunner.sh  gen_filter_bank.py  gen_hanning.py  link.sh  liverunner.cpp  model_aug15_lstm_small_dist_okay_sense_stop_snooze_tiny_830.c  model_aug30_lstm_med_dist_okay_sense_stop_snooze_tiny_912_ep216_q12.c  model_aug30_lstm_med_dist_okay_sense_stop_snooze_tiny_912_q10.c  model_aug30_lstm_med_dist_okay_sense_stop_snooze_tiny_912_q12.c  model_aug30_lstm_med_dist_okay_sense_stop_snooze_tiny_912_q15.c  model_aug30_lstm_med_dist_okay_sense_stop_snooze_tiny_912_q7.c  model_aug30_lstm_med_dist_okay_sense_stop_snooze_tiny_912_q9.c  model_aug30_lstm_med_dist_okay_sense_stop_snooze_tiny_end0_1022_ep052.c  serverfeatsrunner.cpp  tensor_utils.py  tinyfeats.cpp  tinytensor.cpp  tinytensor_conv_layer.c  tinytensor_conv_layer.h  tinytensor_features.c  tinytensor_features.h  tinytensor_fullyconnected_layer.c  tinytensor_fullyconnected_layer.h  tinytensor_lstm_layer.c  tinytensor_lstm_layer.h  tinytensor_math.c  tinytensor_math.h  tinytensor_maxpool_layer.c  tinytensor_maxpool_layer.h  tinytensor_maxpoolrelu_layer.c  tinytensor_maxpoolrelu_layer.h  tinytensor_memory.h  tinytensor_net.c  tinytensor_net.h  tinytensor_tensor.c  tinytensor_tensor.h  (+4 more)
implementation/hellomath/: arm_cfft_q15.c  fft.c  fft.h  hellomath.c  hellomath.h  sha1.h
implementation/models/: net1.c  net2.c
implementation/python_helpers/: create_tensor_from_feats.py  fftr.py  gen_fftr_expw.py  gen_filter_bank.py  gen_hanning.py  gen_tables.py  get_layer_scaling.py  keras2_to_c.py  keras_to_c.py  plot_bin_file.py  quantize_coeeffs.py  tanh_lookup.py  tensor_utils.py
implementation/unit-test/: testconv.cpp  testfeatures.cpp  testfull.cpp  testlstm.cpp  testmath.cpp  testmaxpool.cpp  testnet.cpp  testrecurrentnet.cpp  testrecurrentnet2.cpp
implementation/unit-test/data/: beginresult.c  biases1.c  biases2.c  big_full_bias.c  big_full_input.c  big_full_output.c  cryb1weights.c  image.c  image2.c  kwClip_1.c  kwClip_160517_02_1.c  kwClip_160517_03_1.c  kwClip_160517_04.c  kwClip_160517_05_1.c  kwClip_41.c  kwClip_42.c  kwClip_43.c  lstm1.c  lstm3.c  midresult.c  model_jun22_smaller_sigm.c  model_may25_lstm_small_okay_sense_tiny2.c  model_oct09_lstm_24x24_dist_okay_sense_tiny_95_1009_ep044.c  ref1.c  ref2.c  small_conv2.c  small_conv_network.c  test_input.c  test_input_rand.c  testinput2_for_small_network.c  testinput_for_small_network.c  testoutput2_for_small_network.c  testoutput_for_small_network.c  weights1.c  weights2.c
net/: cnn_predict_spec.py  data.py  detection_example.py  eval.py  harvest.py  modeldefs.py  predict.sh  predict_all_epochs.py  predict_all_files.py  predict_spec.py  test_all.sh  train.sh  train_all.sh  train_cnn_spec.py  train_spec.py  wav2fbank_stream.py
net/models/: zip_model.sh  zip_model_epoch.sh
sandbox/klein-pywit/examples/: setalarm.py
sandbox/klein-pywit/wit/: wit.py
